# sCT

./: .gitignore  README.md  diskussions_todo.txt
Documentation/: Interessante kapitler.txt
Litteratur/: README.md  Skabelon.txt
Litteratur/A Threshold Selection Method from Gray-Level Histograms/: README.md
Litteratur/Atlas-guided non-uniform attenuation correction in cerebral 3D PET imaging/: README.md
Litteratur/Attenuation Correction Synthesis for Hybrid PET-MR Scanners/: Indhold.txt  README.md
Litteratur/CT substitute derived from MRI sequences with ultrashort echo time/: Indhold.txt  README.md
Litteratur/Clinical ultrashort echo time imaging of bone and other connective tissues/: README.md
Litteratur/Dedicated-magnetic-resonance-Imaging-in-the-Radiotherapy-Clinic/: README.md
Litteratur/Evaluation of an attenuation correction method for PETMR imaging of the head based on substitute CT images/: Indhold.txt  README.md
Midtvejsrapport/: status.tex
Synopsis/: synopsis.aux  synopsis.tex
old_src_matlab/: .gitignore
report/: abstract.tex  appendix.tex  bachelor.bbl  bachelor.blg  bachelor.tex  bibtex.bib  bibtex.tex  diskussion.tex  forord.tex  forsoegsplan.tex  introduktion.tex  kapiteloversigt.txt  konklusion.tex  korrekthed.tex  ku-forside.sty  metoden.tex  praktisk.tex  registrering.tex  t1vst2.tex  teori.tex  tests.tex  vurdering.tex
src/: .gitignore  coreg_all.py  mean_variance.py  model1234.mat  startup.m  view_image.m
src/EM/: CMakeLists.txt  EM.cpp
src/mean_gen/: CMakeLists.txt  mean_gen.cpp
src_old_matlab/: view_image.m
(+81 files in other folders)
